Fix z-index for channel number and add tooltip

--- a/src/app/channels/channel.tiles.directive/_channel.tiles.scss
+++ b/src/app/channels/channel.tiles.directive/_channel.tiles.scss
@@ -88,7 +88,7 @@ $color-no-img-bg: #34495E;
 
       .channel-stb-no {
         position: absolute;
-        z-index: 10;
+        z-index: 11;
         display: block;
         padding: 5px 10px;
         border-right: 1px solid white;
